[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Enemies/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemy1/Enemy1Idle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy1/Enemy1Idle2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy1/Enemy1Dash1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy1/Enemy1Dash2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy1/Enemy1Dash3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemy1/Enemy1Dash4.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Enemies/FlyEnemy.gd" type="Script" id=8]
[ext_resource path="res://Scenes/State/StateIdle.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/State/StateDash.tscn" type="PackedScene" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "dash",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 13 )

[node name="FlyEnemy" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="Health" parent="." index="0"]
max_health = 3

[node name="AnimatedSprite" parent="Body" index="0"]
frames = SubResource( 1 )
animation = "dash"
playing = true

[node name="CollisionShape2D" parent="Body/Area2D" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="Body" index="3"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="StateIdle" parent="StateMachine" index="1" instance=ExtResource( 9 )]

[node name="StateDash" parent="StateMachine" index="2" instance=ExtResource( 10 )]

[node name="IdleTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="DashTimer" type="Timer" parent="." index="6"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]

[editable path="Body"]
